--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta name="google-site-verification" content="tjUdPGQbOsdyMBO2hOkU2Ma-Hn81b82Si6YNFnIoBBo" />
+    <meta name="description" content="Test your typing speed with our stylish and fun typing speed web app! Track your performance and improve your typing accuracy.">
+   <meta name="keywords" content="Typing Speed Test, typing speed, test typing, typing speed test, online typin test, online typing speed test, Fast Typing, Online Typing Game, Typing Practice, Typing App">
+   <meta name="author" content="Sumair Saqib">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Speed Test</title>
